fix: no scroll jump on revealer component

--- a/src/index.css
+++ b/src/index.css
@@ -79,16 +79,18 @@ html, body, #root {
     box-sizing: border-box;
 }
 
-a:not(.no-fancy), a:link:not(.no-fancy), a:visited:not(.no-fancy), a:active:not(.no-fancy), a:hover:not(.no-fancy) {
+.link, a:not(.no-fancy), a:link:not(.no-fancy), a:visited:not(.no-fancy), a:active:not(.no-fancy), a:hover:not(.no-fancy) {
     font-weight: 500;
     background: linear-gradient(50deg, rgb(255, 196, 0), rgb(255, 123, 0));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
     transition: filter 200ms ease-out;
+
+    cursor: pointer;
 }
 
-a:hover:not(.no-fancy) {
+.link:hover, a:hover:not(.no-fancy) {
     filter: brightness(120%);
 }
 
